# Sketchfish

./: .env.example  .gitignore  AGENTS.md  ART_STOCKFISH_SPEC.md  CLAUDE.md  DECISIONS.md  IMPLEMENTATION_PLAN.md  README.md  REAL_SKETCH_VALIDATION.md  pyproject.toml  scratch_angles_viz.py
.claude/: settings.json
benchmark/: __init__.py  _env.py  dataset.py  demo_realface.py  render.py  run.py  scoring.py  vlm.py  vocab.py
benchmark/results/: benchmark_results.json
data/: .gitignore  README.md  detection_report.md  results.csv  sources.csv
src/artstockfish/: __init__.py  align.py  annotate.py  cli.py  config.py  critique.py  evaluate.py  frame.py  pipeline.py  schema.py  server.py
src/artstockfish.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/artstockfish/detect/: __init__.py  cpd_register.py  mediapipe_face.py
src/artstockfish/measure/: __init__.py  angles.py  contour.py  landmarks.py  negspace.py  pose.py  proportions.py
src/artstockfish/synth/: __init__.py  distort.py  sketchify.py
tests/: conftest.py  fixtures.py  test_align.py  test_api.py  test_benchmark.py  test_contour.py  test_detect.py  test_evaluate.py  test_harness.py  test_m0_acceptance.py  test_measure_angles.py  test_measure_landmarks.py  test_measure_proportions.py  test_pose.py  test_stability.py  test_verbalizer_guard.py
web/: index.html
