[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artstockfish"
version = "0.0.0"
description = "Art Stockfish — a computer-vision drawing coach grounded in measurable geometry."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "opencv-python",
]

[project.optional-dependencies]
# Detection / geometry deps land in later waves (M2/M3); kept out of the core install.
detect = ["mediapipe"]
geom = ["shapely"]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
