[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artstockfish"
version = "0.0.0"
description = "Art Stockfish — a computer-vision drawing coach grounded in measurable geometry."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "opencv-python",
    "matplotlib",  # M0/M1 debug overlays (spec §4); annotate.py renders the demo PNG
]

[project.optional-dependencies]
# Detection / geometry deps land in later waves (M2/M3); kept out of the core install.
detect = ["mediapipe", "pycpd"]
geom = ["shapely"]
dev = ["pytest"]

[project.scripts]
artstockfish = "artstockfish.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
