[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artstockfish"
version = "0.0.0"
description = "Art Stockfish — a computer-vision drawing coach grounded in measurable geometry."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "opencv-python",
    "matplotlib",  # M0/M1 debug overlays (spec §4); annotate.py renders the demo PNG
]

[project.optional-dependencies]
# Detection / geometry deps land in later waves (M2/M3); kept out of the core install.
detect = ["mediapipe", "pycpd"]
geom = ["shapely"]
# M4 product surface (spec §8 M4): SVG overlay + FastAPI web app + static page.
web = ["fastapi", "svgwrite", "python-multipart", "uvicorn"]
# M5 benchmark (spec §8 M5): the frontier-VLM baselines. Either SDK is enough — pick
# the provider you have a key for (python -m benchmark.run --provider openai|anthropic).
bench = ["openai", "anthropic"]
dev = ["pytest", "httpx"]

[project.scripts]
artstockfish = "artstockfish.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
